# getMusic

./: .gitignore  CLAUDE.md  LICENSE  Lattice.py  README.md  cleaner.py  extract_mp3_art.py  extract_opus_art.py  getMusic.py  music_library.txt  patchnotes.md  pyproject.toml  retag.py  roadmap.md  spec.md  testFLAC.py
src/lattice/: __main__.py  cli.py  config.py  tags.py  tui.py  utils.py
src/lattice/modes/: artwork.py  audit.py  integrity.py  library.py  playlists.py  stats.py
