[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lattice"
version = "4.0.0"
description = "Music library toolkit: tree, integrity, art, duplicates, tag audit"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "vrnvctss"}
]
dependencies = [
    "mutagen>=1.46.0",
    "tqdm>=4.65.0"
]

[project.scripts]
lattice = "lattice.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lattice"]

[tool.hatch.envs.default]
dependencies = [
    "nuitka>=2.0"
]

[tool.hatch.envs.default.scripts]
build-bin = "python -m nuitka --standalone --onefile src/lattice/__main__.py --output-filename=lattice --output-dir=build"
