[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lattice"
version = "4.2.1"
description = "Music library toolkit: tree, integrity, art, duplicates, tag audit"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "vrnvctss"}
]
dependencies = [
    "mutagen>=1.46.0",
    "tqdm>=4.65.0"
]

[project.scripts]
lattice = "lattice.cli:main"

[project.optional-dependencies]
pyinstaller = ["pyinstaller>=6.0"]

[tool.hatch.envs.default]
dependencies = [
    "pyinstaller>=6.0"
]

[tool.hatch.envs.default.scripts]
build-bin = "pyinstaller --onefile --name lattice --paths src src/lattice/__main__.py"
